// This is file was generated by netdx on (2017-11-24 11:07:56 AM.
syntax = "proto3";
package Ndx.Decoders.Base;
message Frame {
    // Encapsulation type ('frame_frame_encap_type')
     int32 FrameEncapType = 1;

    // Frame Number ('frame_frame_number')
     uint32 FrameNumber = 2;

    // Frame length on the wire ('frame_frame_len')
     uint32 FrameLen = 3;

    // Frame length stored into the capture file ('frame_frame_cap_len')
     uint32 FrameCapLen = 4;

    // Protocols in frame ('frame_frame_protocols')
     string FrameProtocols = 5;

}
